# buffalo

./: LICENSE  README.md  SPECS.md  TODO.md
android-app/: .gitignore
android-app/app/: build.gradle  version.properties
android-app/app/src/main/java/com/arseniusgen/buffalo/: CameraActivity.kt  ControlWebSocketClient.kt  HardwarePipeline.kt  SoftwarePipeline.kt  StreamEncoder.kt  TcpFrameSender.kt
android-app/app/src/main/java/com/arseniusgen/buffalo/fragments/: ColorSpaceFragment.kt  DynamicRangeFragment.kt  EncodeApiFragment.kt  FilterFragment.kt  PreviewFragment.kt  PreviewStabilizationFragment.kt  SelectorFragment.kt  VideoCodecFragment.kt
android-app/app/src/main/res/navigation/: nav_graph.xml
android-app/app/src/main/res/values/: strings.xml
code_examples/: INTEGRATION.md  README.md
code_examples/Camera2Video/: local.properties
code_examples/Camera2Video/app/: build.gradle
code_examples/Camera2Video/app/src/main/: AndroidManifest.xml
code_examples/Camera2Video/app/src/main/java/com/arseniusgen/buffalo/: DebugMjpegServer.kt  EncoderWrapper.kt  HardwarePipeline.kt  Pipeline.kt  SoftwarePipeline.kt  StreamEncoder.kt
debug-code/: test_receiver.py
obs-addon/: .gitignore  Cargo.toml
obs-addon/src/: control.rs  lib.rs  tcp_client.rs
obs-addon/vendor-obs-wrapper/: Cargo.toml
obs-plugin/: Cargo.toml  build.rs
obs-plugin/.cargo/: config.toml
obs-plugin/src/: control.rs  lib.rs  tcp_client.rs  tcp_server.rs
obs-plugin/vendor-obs-wrapper/: .cargo_vcs_info.json
obs-plugin/vendor-obs-wrapper/src/source/: mod.rs
(+4 files in other folders)
