[package]
name = "buffalo-obs-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "buffalo_obs_plugin"
crate-type = ["cdylib"]

[dependencies]
# OBS source registration. This crate's API is young and has shifted between
# 0.1/0.2/0.4 (see its own README) -- if `cargo build` complains about missing
# methods/traits below, check https://docs.rs/obs-wrapper/latest against what's
# pinned here and adjust; the shape (Sourceable/GetNameSource/Module) is stable,
# exact method names on SourceContext have moved around.
obs-wrapper = "0.4"

# Pure-decode H264, no OBS/ffmpeg linkage needed -- ships OpenH264 source and
# builds it via cc in build.rs, so it Just Builds on a fresh machine.
openh264 = "0.6"

# Control channel (WebSocket + JSON), matching SPECS.md 1.1.
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
